# skills-sandbox

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  Readme.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/bump-mthds-version/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: checks.yml  guard-branches.yml  tests.yml
hooks/: hooks.json  validate-mthds.sh
scripts/: check.py
skills/mthds-build/: SKILL.md
skills/mthds-build/references/: manual-build-phases.md  talents-and-presets.md
skills/mthds-check/: SKILL.md
skills/mthds-edit/: SKILL.md
skills/mthds-edit/references/: talents-and-presets.md
skills/mthds-explain/: SKILL.md
skills/mthds-fix/: SKILL.md
skills/mthds-inputs/: SKILL.md
skills/mthds-install/: SKILL.md
skills/mthds-pipelex-setup/: SKILL.md
skills/mthds-pkg/: SKILL.md
skills/mthds-publish/: SKILL.md
skills/mthds-run/: SKILL.md
skills/mthds-share/: SKILL.md
skills/shared/: error-handling.md  mthds-agent-guide.md  mthds-reference.md  native-content-types.md
tests/unit/: test_check.py
